syntax = "proto3";

package author;

option java_package = "com.proto.author";
option java_multiple_files = true;

message AddAuthorRequest {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
}

message AddAuthorResponse {
    bool added = 1;
}

service AuthorsService {
    rpc addAuthor (AddAuthorRequest) returns (AddAuthorResponse);
}